<resources>
    <string name="app_name">AndroidDemo</string>
    <string name="title_activity_anim">AnimActivity</string>
    <string name="title_activity_ipc">IPCActivity</string>
    <string name="title_activity_client">AIDLActivity</string>
    <string name="title_activity_jni">JNIActivity</string>
    <string name="title_activity_animation">AnimationActivity</string>
    <string name="title_activity_animation_xml">AnimationXmlActivity</string>
    <string name="title_activity_value_animator">ValueAnimatorActivity</string>
    <string name="title_activity_object_animator">ObjectAnimatorActivity</string>
    <string name="title_activity_property_animator">PropertyValuesHolderAnimatorActivity</string>
    <string name="title_activity_animator_set">AnimatorSetActivity</string>
    <string name="title_activity_xml_animator">XmlAnimatorActivity</string>
    <string name="title_activity_layout_animation">LayoutAnimationActivity</string>
    <string name="title_activity_layout_transition">LayoutTransitionActivity</string>
    <string name="title_activity_reveal">RevealActivity</string>
    <string name="title_activity_ripple">RippleActivity</string>
    <string name="title_activity_state">StateActivity</string>
    <string name="title_activity_from">FromActivity</string>
    <string name="title_activity_to">ToActivity</string>
    <string name="title_activity_customview">CustomViewActivity</string>
    <string name="title_activity_canvas">CanvasActivity</string>
    <string name="title_activity_patheffect">PathEffectActivity</string>
    <string name="title_activity_shader">ShaderActivity</string>
    <string name="title_activity_xfermode">XfermodeActivity</string>
    <string name="title_activity_bitmap">BitmapActivity</string>
    <string name="title_activity_color_matrix">ColorMatrixActivity</string>
    <string name="title_activity_color_matrix_api">ColorMatrixApiActivity</string>
    <string name="title_activity_matrix">MatrixActivity</string>
    <string name="title_activity_pixel">PixelActivity</string>
    <string name="title_activity_drawable">DrawableActivity</string>
    <string name="title_activity_toolbar">ToolbarActivity</string>
    <string name="title_activity_jetpack">JetpackActivity</string>
    <string name="title_activity_binding">BindingActivity</string>
    <string name="title_activity_lifecycle">LifecycleActivity</string>
    <string name="title_activity_livedata">LiveDataActivity</string>
    <string name="title_activity_mvvm">MvvmActivity</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_activity_room">RoomActivity</string>
    <string name="title_activity_startup">AppStartupActivity</string>
    <string name="title_activity_viewmodel">ViewModelActivity</string>
    <string name="title_activity_view">ViewActivity</string>
    <string name="title_activity_listview">ListViewActivity</string>
    <string name="title_activity_recyclerview">RecyclerViewActivity</string>
    <string name="title_activity_scroller">ScrollerActivity</string>
    <string name="title_activity_surfaceview">SurfaceViewActivity</string>
    <string name="title_activity_drag">DragActivity</string>
    <string name="title_activity_media">MediaActivity</string>
    <string name="title_activity_audio">AudioActivity</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="scale">Scale</string>
    <string name="alpha">Alpha</string>
    <string name="rotate">Rotate</string>
    <string name="translate">Translate</string>
    <string name="set">Set</string>
    <string name="start_record">开始录音</string>
    <string name="stop_record">停止录音</string>
    <string name="play_record">播放录音</string>
    <string name="stop_play">停止播放</string>
    <string name="audio_learn">音频学习</string>
    <string name="video_learn">视频学习</string>
    <string name="openGL_learn">OpenGL ES学习</string>
    <string name="start_preview">开始预览</string>
    <string name="stop_preview">停止预览</string>
    <string name="short_text">Hello World</string>
    <string name="large_text" formatted="false">AppBarLayout
AppBarLayout是一个实现了很多材料设计特性的垂直的LinearLayout，它能响应滑动事件。
        必须在它的子view上设置app:layout_scrollFlags属性或者是在代码中调用setScrollFlags()设置这个属性。
        这个类的特性强烈依赖于它是否是一个CoordinatorLayout的直接子view，如果不是，那么它的很多特性不能够使用。
        AppBarLayout需要一个具有滑动属性的兄弟节点view，并且在这个兄弟节点View中指定behavior属性为AppBarLayout.ScrollingViewBehavior的类实例，可以使用一个内置的string表示这个默认的实例@string/appbar_scrolling_view_behavior。
AppBarLayout的子布局有5种滚动标识(上面代码CollapsingToolbarLayout中配置的app:layout_scrollFlags属性)：
        scroll：所有想滚动出屏幕的view都需要设置这个flag， 没有设置这个flag的view将被固定在屏幕顶部。
        enterAlways：这个flag让任意向下的滚动都会导致该view变为可见，启用快速“返回模式”。
        enterAlwaysCollapsed：假设你定义了一个最小高度（minHeight）同时enterAlways也定义了，那么view将在到达这个最小高度的时候开始显示，并且从这个时候开始慢慢展开，当滚动到顶部的时候展开完。
        exitUntilCollapsed：当你定义了一个minHeight，此布局将在滚动到达这个最小高度的时候折叠。
        snap：当一个滚动事件结束，如果视图是部分可见的，那么它将被滚动到收缩或展开。例如，如果视图只有底部25%显示，它将折叠。相反，如果它的底部75%可见，那么它将完全展开。
CollapsingToolbarLayout
        CollapsingToolbarLayout作用是提供了一个可以折叠的Toolbar，它继承自FrameLayout，给它设置layout_scrollFlags，它可以控制包含在CollapsingToolbarLayout中的控件(如：ImageView、Toolbar)在响应layout_behavior事件时作出相应的scrollFlags滚动事件(移除屏幕或固定在屏幕顶端)。
        CollapsingToolbarLayout可以通过app:contentScrim设置折叠时工具栏布局的颜色，通过app:statusBarScrim设置折叠时状态栏的颜色。默认contentScrim是colorPrimary的色值，statusBarScrim是colorPrimaryDark的色值。
CollapsingToolbarLayout，音：克莱普辛。
        CollapsingToolbarLayout的子布局有3种折叠模式（Toolbar中设置的app:layout_collapseMode）
        off：默认属性，布局将正常显示，无折叠行为。
        pin：CollapsingToolbarLayout折叠后，此布局将固定在顶部。
        parallax：CollapsingToolbarLayout折叠时，此布局也会有视差折叠效果。
当CollapsingToolbarLayout的子布局设置了parallax模式时，我们还可以通过app:layout_collapseParallaxMultiplier设置视差滚动因子，值为：0~1。
NestedScrollView
        在新版的support-v4兼容包里面有一个NestedScrollView控件，这个控件其实和普通的ScrollView并没有多大的区别，这个控件其实是Meterial Design中设计的一个控件，目的是跟MD中的其他控件兼容。应该说在MD中，RecyclerView代替了ListView，而NestedScrollView代替了ScrollView，他们两个都可以用来跟ToolBar交互，实现上拉下滑中ToolBar的变化。在NestedScrollView的名字中其实就可以看出他的作用了，Nested是嵌套的意思，而ToolBar基本需要嵌套使用。
FloatingActionButton
        FloatingActionButton就比较简单了，就是一个漂亮的按钮，其本质是一个ImageVeiw。有一点要注意，Meterial Design引入了海拔（或者说高度）的概念，就是所有的view都有了高度，他们像贴纸一样，一层一层贴在手机屏幕上，而FloatingActionButton的海拔最高，它贴在所有view的最上面，没有view能覆盖它。</string>
</resources>
