<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".animation.animation.AnimationXmlActivity">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_scale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scale"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_alpha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alpha"
                android:textAllCaps="false"/>


            <Button
                android:id="@+id/btn_rotate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rotate"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/btn_translate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/translate"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/btn_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set"
                android:textAllCaps="false"/>

        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="#982222"
        android:layout_centerInParent="true"
        android:text="@string/short_text"/>

</RelativeLayout>
